# Marreg2-project

./: .gitignore  CMakeLists.txt  package.xml
launch/: launch1.launch.py
my_package/: controller_node.py  guidance_node.py  joystick_node.py  my_node.py  my_publisher.py  observer_node.py  thrust_allocation_node.py
my_package/helpers/: Luenberger.py  controllers.py  create_R.py  dead_reckoning.py  joystick_helpers.py  luenberger.py  observers.py  ship_config.py  stationkeeping.py  straight_line.py  thruster_allocation_extended.py  wrap.py
my_package/launch/: launch1.py
